@@ -17,26 +17,26 @@ import java.util.List;
 import static org.junit.Assert.assertEquals;
 
 @RunWith(MockitoJUnitRunner.class)
+public class CatTest {
 
-    public class CatTest {
 
-        @Mock Feline feline;
+    @Mock
+    Feline feline;
 
-        @Test
-        public void getSoundTest() {
-            Cat cat = new Cat(feline);
-            String expectedSound = "Мяу";
-            assertEquals(expectedSound, cat.getSound());
-        }
+      @Test
+    public void checkedGetSound() {
+        Cat cat = new Cat(feline);
+        String actual = cat.getSound();
+        assertEquals("Мяу", actual);
+    }
 
     @Test
-    public void getFoodReturnList() throws Exception {
+        public void getFoodReturnList() throws Exception {
         Cat cat = new Cat(feline);
-        List<String> eat = List.of("Животные", "Птицы", "Рыба");
-        List<String> eatCat = cat.predator.eatMeat();
-        Assert.assertEquals(eat, eatCat);
+        Mockito.when(cat.getFood()).thenReturn(Arrays.asList("Животные", "Птицы", "Рыба"));
+        List<String> expectedEatMeat = Arrays.asList("Животные", "Птицы", "Рыба");
+        List<String> actualEatMeat = cat.getFood();
+        assertEquals(expectedEatMeat, actualEatMeat);
     }
+
 }
-
-
-
